[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/DownloadButton.gd" type="Script" id=1]
[ext_resource path="res://Scripts/TileBar.gd" type="Script" id=2]
[ext_resource path="res://Visuals/themes/MinimalUI.tres" type="Theme" id=3]
[ext_resource path="res://Visuals/Icons/MinIcon.svg" type="Texture" id=4]
[ext_resource path="res://Visuals/Icons/MaxIcon.svg" type="Texture" id=5]
[ext_resource path="res://Scenes/sys_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://Visuals/Icons/ExpandDrawer.png" type="Texture" id=7]
[ext_resource path="res://Scripts/ToggleExpand.gd" type="Script" id=8]
[ext_resource path="res://Visuals/themes/OpenSans-Regular.tres" type="DynamicFont" id=9]
[ext_resource path="res://Visuals/Icons/controller.png" type="Texture" id=10]
[ext_resource path="res://Scenes/NavItem.tscn" type="PackedScene" id=11]
[ext_resource path="res://Visuals/Icons/SettingsGear.svg" type="Texture" id=12]
[ext_resource path="res://Scripts/Page_Games.gd" type="Script" id=13]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 120, 600 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "SideBarExpandAnimation"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_min_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.34151, 0.15932 ),
"update": 0,
"values": [ Vector2( 120, 600 ), Vector2( 300, 600 ) ]
}

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="bg" type="ColorRect" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.156863, 0.184314, 0.266667, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="SideBar" type="ColorRect" parent="MarginContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 600.0
rect_min_size = Vector2( 120, 600 )
rect_clip_content = true
color = Color( 0.0980392, 0.113725, 0.196078, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/SideBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="ToggleExpand" type="Control" parent="MarginContainer/HBoxContainer/SideBar/VBoxContainer"]
margin_right = 120.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer/SideBar/VBoxContainer/ToggleExpand"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.164706, 0.192157, 0.32549, 1 )

[node name="Sprite" type="Sprite" parent="MarginContainer/HBoxContainer/SideBar/VBoxContainer/ToggleExpand"]
position = Vector2( 60, 30 )
scale = Vector2( 0.0737305, 0.0737305 )
texture = ExtResource( 7 )

[node name="NavItems" type="VBoxContainer" parent="MarginContainer/HBoxContainer/SideBar/VBoxContainer"]
margin_top = 60.0
margin_right = 120.0
margin_bottom = 600.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Game" parent="MarginContainer/HBoxContainer/SideBar/VBoxContainer/NavItems" instance=ExtResource( 11 )]
Icon = ExtResource( 10 )
label = "Games"
Page = NodePath("../../../../MainBox/Body/Page_Games")
IsDefaultOpen = true

[node name="Settings" parent="MarginContainer/HBoxContainer/SideBar/VBoxContainer/NavItems" instance=ExtResource( 11 )]
margin_top = 80.0
margin_bottom = 160.0
Icon = ExtResource( 12 )
label = "Settings"
Page = NodePath("../../../../MainBox/Body/Settings")

[node name="ExpandAnimation" type="AnimationPlayer" parent="MarginContainer/HBoxContainer/SideBar"]
anims/RESET = SubResource( 2 )
anims/SideBarExpandAnimation = SubResource( 3 )

[node name="MainBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="TileBar" type="Control" parent="MarginContainer/HBoxContainer/MainBox"]
margin_right = 904.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MainBox/TileBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 2

[node name="MinButton" parent="MarginContainer/HBoxContainer/MainBox/TileBar/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 754.0
margin_right = 804.0
Type = 0
Icon = ExtResource( 4 )

[node name="MaxButton3" parent="MarginContainer/HBoxContainer/MainBox/TileBar/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 804.0
margin_right = 854.0
Type = 1
Icon = ExtResource( 5 )

[node name="CloseButton4" parent="MarginContainer/HBoxContainer/MainBox/TileBar/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 854.0
margin_right = 904.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/MainBox/TileBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 9 )
text = "Game Launcher"
valign = 1

[node name="Body" type="Control" parent="MarginContainer/HBoxContainer/MainBox"]
margin_top = 30.0
margin_right = 904.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="Page_Games" type="Control" parent="MarginContainer/HBoxContainer/MainBox/Body"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )

[node name="Settings" type="Control" parent="MarginContainer/HBoxContainer/MainBox/Body"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Game" type="MarginContainer" parent="MarginContainer/HBoxContainer/MainBox/Body"]
visible = false
margin_right = 904.0
margin_bottom = 405.0
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="Button" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MainBox/Body/Game"]
margin_left = 100.0
margin_right = 804.0
margin_bottom = 405.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/MainBox/Body/Game/Button"]
visible = false
margin_right = 704.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="Thumbnail" type="TextureRect" parent="MarginContainer/HBoxContainer/MainBox/Body/Game/Button"]
margin_right = 704.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
expand = true
stretch_mode = 6

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/MainBox/Body/Game/Button"]
margin_top = 300.0
margin_right = 704.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 100 )
theme = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
text = "Download Game"
script = ExtResource( 1 )

[node name="ProgressBar" type="ColorRect" parent="MarginContainer/HBoxContainer/MainBox/Body/Game/Button"]
margin_top = 400.0
margin_right = 704.0
margin_bottom = 405.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0.309804, 0.376471, 0.815686, 1 )

[connection signal="gui_input" from="MarginContainer/HBoxContainer/SideBar/VBoxContainer/ToggleExpand/ColorRect" to="MarginContainer/HBoxContainer/SideBar/VBoxContainer/ToggleExpand" method="_on_ColorRect_gui_input"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/SideBar/VBoxContainer/ToggleExpand/ColorRect" to="MarginContainer/HBoxContainer/SideBar/VBoxContainer/ToggleExpand" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/SideBar/VBoxContainer/ToggleExpand/ColorRect" to="MarginContainer/HBoxContainer/SideBar/VBoxContainer/ToggleExpand" method="_on_ColorRect_mouse_exited"]
[connection signal="gui_input" from="MarginContainer/HBoxContainer/MainBox/TileBar" to="MarginContainer/HBoxContainer/MainBox/TileBar" method="_on_TileBar_gui_input"]
[connection signal="visibility_changed" from="MarginContainer/HBoxContainer/MainBox/Body/Page_Games" to="MarginContainer/HBoxContainer/MainBox/Body/Page_Games" method="_on_Page_Games_visibility_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MainBox/Body/Game/Button/Button" to="MarginContainer/HBoxContainer/MainBox/Body/Game/Button/Button" method="_on_Button_pressed"]
